Cache size settings

--- a/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
@@ -99,7 +99,8 @@
                                                         Margin="8,0"
                                                         VerticalAlignment="Bottom"
                                                         IsTextSelectionEnabled="True"
-                                                        Text="{x:Bind DateAdded}" />
+                                                        Text="{x:Bind AgeFormated}"
+                                                        ToolTipService.ToolTip="{x:Bind DateAddedTooltipFormat}" />
                                                 </StackPanel>
 
 
