--- a/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/ModUpdateAvailableWindow.xaml
@@ -4,11 +4,13 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:GIMI_ModManager.WinUI.Views.Controls"
+    xmlns:controls1="using:CommunityToolkit.WinUI.UI.Controls"
     xmlns:converters="using:CommunityToolkit.WinUI.UI.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:services="using:GIMI_ModManager.Core.Services"
+    xmlns:viewModels="using:GIMI_ModManager.WinUI.ViewModels"
     xmlns:winUiEx="using:WinUIEx"
     x:Name="RootWindow"
     mc:Ignorable="d">
@@ -49,73 +51,122 @@
                         ToolTipService.ToolTip="Open Mod folder..." />
                 </StackPanel>
 
-                <ListView
-                    Grid.Row="1"
-                    ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
-                    SelectionMode="None">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="services:UpdateCheckResult">
-                            <Grid
-                                Margin="0,8"
-                                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
-                                CornerRadius="4">
+                <controls1:SwitchPresenter Grid.Row="1" Value="{x:Bind ViewModel.Initializing, Mode=OneWay}">
 
-                                <controls:BoolBorder
-                                    BorderColor="{ThemeResource AccentFillColorSelectedTextBackgroundBrush}"
-                                    BorderSize="2"
-                                    ShowBorder="{x:Bind IsNewer}">
-                                    <Grid Margin="8">
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition Height="Auto" />
-                                            <RowDefinition />
-                                        </Grid.RowDefinitions>
+                    <controls1:Case Value="true">
+                        <Grid HorizontalAlignment="Center" VerticalAlignment="Center">
+                            <StackPanel>
+                                <ProgressRing IsActive="True" />
+                                <TextBlock Text="Loading Mod Info from GameBanana..." />
+                            </StackPanel>
+                        </Grid>
 
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="Auto" />
-                                            <ColumnDefinition />
-                                        </Grid.ColumnDefinitions>
+                    </controls1:Case>
+                    <controls1:Case Value="false">
+                        <ListView
+                            IsEnabled="{x:Bind ViewModel.IsNotBusy, Mode=OneWay}"
+                            ItemsSource="{x:Bind ViewModel.ModFileInfos, Mode=OneWay}"
+                            SelectionMode="None">
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="viewModels:ModFileInfoVm">
+                                    <Grid
+                                        Margin="0,8"
+                                        Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                                        CornerRadius="4">
 
-                                        <StackPanel Orientation="Horizontal">
-                                            <TextBlock
-                                                IsTextSelectionEnabled="True"
-                                                Style="{ThemeResource SubtitleTextBlockStyle}"
-                                                Text="{x:Bind FileName}" />
+                                        <controls:BoolBorder
+                                            BorderColor="{ThemeResource AccentFillColorSelectedTextBackgroundBrush}"
+                                            BorderSize="2"
+                                            ShowBorder="{x:Bind IsNew}">
+                                            <Grid Margin="8">
+                                                <Grid.RowDefinitions>
+                                                    <RowDefinition Height="Auto" />
+                                                    <RowDefinition />
+                                                </Grid.RowDefinitions>
 
-                                            <TextBlock
-                                                Margin="8,0"
-                                                VerticalAlignment="Bottom"
-                                                IsTextSelectionEnabled="True"
-                                                Text="{x:Bind DateAdded}" />
-                                        </StackPanel>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition Width="Auto" />
+                                                    <ColumnDefinition />
+                                                </Grid.ColumnDefinitions>
+
+                                                <StackPanel Orientation="Horizontal">
+                                                    <TextBlock
+                                                        IsTextSelectionEnabled="True"
+                                                        Style="{ThemeResource SubtitleTextBlockStyle}"
+                                                        Text="{x:Bind FileName}" />
+
+                                                    <TextBlock
+                                                        Margin="8,0"
+                                                        VerticalAlignment="Bottom"
+                                                        IsTextSelectionEnabled="True"
+                                                        Text="{x:Bind AgeFormated}"
+                                                        ToolTipService.ToolTip="{x:Bind DateAddedTooltipFormat}" />
+                                                </StackPanel>
 
 
 
-                                        <TextBlock
-                                            Grid.Row="1"
-                                            Grid.Column="0"
-                                            IsTextSelectionEnabled="True"
-                                            Text="{x:Bind Description}" />
+                                                <TextBlock
+                                                    Grid.Row="1"
+                                                    Grid.Column="0"
+                                                    IsTextSelectionEnabled="True"
+                                                    Text="{x:Bind Description}" />
 
-                                        <TextBlock
-                                            Grid.Row="0"
-                                            Grid.Column="1"
-                                            HorizontalAlignment="Right"
-                                            Text="New since last check"
-                                            Visibility="{Binding Path=IsNewer, Mode=OneTime, Converter={StaticResource BoolToVisibilityConverter}}" />
+                                                <TextBlock
+                                                    Grid.Row="0"
+                                                    Grid.Column="1"
+                                                    HorizontalAlignment="Right"
+                                                    Text="New since last check"
+                                                    Visibility="{Binding Path=IsNew, Mode=OneTime, Converter={StaticResource BoolToVisibilityConverter}}" />
 
-                                        <Button
-                                            Grid.Row="1"
-                                            Grid.Column="1"
-                                            HorizontalAlignment="Right"
-                                            Content="(Not Implemented) Download "
-                                            IsEnabled="False" />
+                                                <StackPanel Grid.Row="1" Grid.Column="1">
+                                                    <Grid>
+                                                        <Button
+                                                            Width="90"
+                                                            HorizontalAlignment="Right"
+                                                            Command="{x:Bind DownloadCommand}"
+                                                            CommandParameter="{Binding Mode=OneWay}"
+                                                            Content="Download"
+                                                            Visibility="{Binding Path=ShowDownloadButton, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+
+                                                        <Button
+                                                            Width="90"
+                                                            HorizontalAlignment="Right"
+                                                            Command="{x:Bind InstallCommand}"
+                                                            CommandParameter="{Binding Mode=OneWay}"
+                                                            Content="Install"
+                                                            Visibility="{Binding Path=ShowInstallButton, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+                                                    </Grid>
+
+
+                                                    <ProgressBar
+                                                        Width="90"
+                                                        HorizontalAlignment="Right"
+                                                        Maximum="100"
+                                                        Value="{x:Bind DownloadProgress, Mode=OneWay}" />
+
+                                                    <Grid Height="3">
+                                                        <ProgressBar
+                                                            Width="90"
+                                                            HorizontalAlignment="Right"
+                                                            IsIndeterminate="{x:Bind IsBusy, Mode=OneWay}"
+                                                            Visibility="{Binding Path=IsBusy, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+                                                    </Grid>
+
+
+
+                                                </StackPanel>
+                                            </Grid>
+                                        </controls:BoolBorder>
                                     </Grid>
-                                </controls:BoolBorder>
-                            </Grid>
 
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </controls1:Case>
+
+                </controls1:SwitchPresenter>
+
+
 
                 <Grid Grid.Row="2" Padding="10">
                     <Grid.ColumnDefinitions>
@@ -128,6 +179,7 @@
                         HorizontalAlignment="Left"
                         Command="{x:Bind ViewModel.IgnoreAndCloseCommand}"
                         Content="Ignore and Close"
+                        IsEnabled="{x:Bind ViewModel.IsNotBusy, Mode=OneWay}"
                         ToolTipService.ToolTip="Removes the notification and closes this window" />
 
                     <StackPanel
@@ -190,6 +242,18 @@
 
             </Grid>
 
+            <controls1:GridSplitter
+                x:Name="ModPaneSplitter"
+                Grid.Column="1"
+                Width="8"
+                Height="40"
+                HorizontalAlignment="Left"
+                ResizeBehavior="BasedOnAlignment"
+                ResizeDirection="Auto">
+                <controls1:GridSplitter.RenderTransform>
+                    <TranslateTransform X="-10" />
+                </controls1:GridSplitter.RenderTransform>
+            </controls1:GridSplitter>
         </Grid>
     </Page>
 
