--- a/src/GIMI-ModManager.WinUI/Views/Controls/CustomImage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/Controls/CustomImage.xaml
@@ -48,7 +48,8 @@
             VerticalAlignment="{x:Bind ButtonVerticalAlignment, Mode=OneWay}"
             Background="{ThemeResource SmokeFillColorDefaultBrush}"
             Command="{x:Bind EditButtonCommand, Mode=OneWay}"
-            ToolTipService.ToolTip="Pick an Image">
+            ToolTipService.ToolTip="Pick an Image"
+            Visibility="{x:Bind EditButtonVisibility, Mode=OneWay}">
             <FontIcon x:Name="EditButtonFontIcon" Glyph="&#xE70F;" />
         </Button>
     </Grid>
