--- a/src/GIMI-ModManager.WinUI/Views/PresetDetailsPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/PresetDetailsPage.xaml
@@ -205,6 +205,7 @@
                                 Spacing="12">
                                 <TextBlock
                                     FontSize="16"
+                                    IsTextSelectionEnabled="True"
                                     Text="{x:Bind Name}"
                                     TextWrapping="WrapWholeWords" />
 
@@ -234,6 +235,7 @@
                                     <TextBlock HorizontalAlignment="Center" Text="Original Path:" />
                                     <TextBlock
                                         HorizontalAlignment="Center"
+                                        IsTextSelectionEnabled="True"
                                         Text="{x:Bind FullPath}"
                                         TextWrapping="Wrap"
                                         ToolTipService.ToolTip="{x:Bind FullPath}" />
